~fix pagination line break in middle pages #17

--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -8,7 +8,6 @@ $pageButtonSize: 40px;
   }
 
   &__buttons-container {
-    max-width: 360px;
     width: fit-content;
     margin: 0 auto;
 
